--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@angular/compiler": "~8.2.0",
     "@angular/core": "~8.2.0",
     "@angular/forms": "~8.2.0",
-    "@angular/platform-browser": "~8.2.0",
+    "@angular/platform-browser": "^8.2.2",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "angular-calendar": "^0.27.15",
+    "bootstrap": "^4.3.1",
+    "date-fns": "^1.30.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
