--- a/package.json
+++ b/package.json
@@ -19,9 +19,15 @@
     "@angular/platform-browser": "^8.2.2",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@fullcalendar/core": "^4.3.1",
+    "@fullcalendar/daygrid": "^4.3.0",
+    "@fullcalendar/interaction": "^4.3.0",
+    "@fullcalendar/timegrid": "^4.3.0",
     "angular-calendar": "^0.27.15",
     "bootstrap": "^4.3.1",
     "date-fns": "^1.30.1",
+    "primeicons": "^2.0.0",
+    "primeng": "^8.0.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
