--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^8.2.2",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@fortawesome/fontawesome-free": "^5.10.1",
     "@fullcalendar/core": "^4.3.1",
     "@fullcalendar/daygrid": "^4.3.0",
     "@fullcalendar/interaction": "^4.3.0",
@@ -26,6 +27,8 @@
     "angular-calendar": "^0.27.15",
     "bootstrap": "^4.3.1",
     "date-fns": "^1.30.1",
+    "ngx-bootstrap": "^5.1.1",
+    "ngx-toastr": "^10.0.4",
     "primeicons": "^2.0.0",
     "primeng": "^8.0.2",
     "rxjs": "~6.4.0",
