--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,9 @@
               "./node_modules/primeicons/primeicons.css",
               "./node_modules/primeng/resources/themes/nova-light/theme.css",
               "./node_modules/primeng/resources/primeng.min.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-              "node_modules/ngx-toastr/toastr.css"
+              "./node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+              "./node_modules/ngx-toastr/toastr.css",
+              "./node_modules/open-iconic/font/css/open-iconic-bootstrap.css"
             ],
             "scripts": []
           },
