--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@fullcalendar/daygrid": "^4.3.0",
     "@fullcalendar/interaction": "^4.3.0",
     "@fullcalendar/timegrid": "^4.3.0",
+    "angular-bootstrap-datetimepicker": "^3.0.0",
     "angular-calendar": "^0.27.15",
     "bootstrap": "^4.3.1",
     "date-fns": "^1.30.1",
+    "moment": "^2.24.0",
     "ngx-bootstrap": "^5.1.1",
     "ngx-toastr": "^10.0.4",
+    "open-iconic": "^1.1.1",
     "primeicons": "^2.0.0",
     "primeng": "^8.0.2",
     "rxjs": "~6.4.0",
